--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,18 +1,31 @@
 <div>
-  <h3>Articles</h3>
+  <h1>List of Articles</h1>
+  <p>
+    <%= link_to "Create new Article", new_article_path %>
+  </p>
+  </br>
   <table>
-    <tr>
-      <th>Id</th>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Actions</th>
-    </tr>
-    <% @articles.each do |article| %>
+    <thead>
       <tr>
-        <td><%= article.id %></td>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
+        <th>Id</th>
+        <th>Title</th>
+        <th>Description</th>
+        <th colspan="3">Actions</th>
       </tr>
-    <% end %>
+    </thead>
+    <tbody>
+      <% @articles.each do |article| %>
+        <tr>
+          <td><%= article.id %></td>
+          <td><%= article.title %></td>
+          <td><%= article.description %></td>
+          <td><%= link_to "Show", article_path(article) %></td>
+          <td><%= link_to "Edit", edit_article_path(article) %></td>
+          <td><%= link_to "Delete", article_path(article), method: :delete, data: {confirm: 'Are you sure?'} %></td>
+        </tr>
+      <% end %>
+    </tbody>
   </table>
+  </br>
+  <%= link_to "Home", root_path %>
 </div>
