--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,10 @@
-<h1>Article Details</h1>
-<p><strong>Title:</strong> <%= @article.title%></p>
-<p><strong>Description:</strong> <%= @article.description%></p>
+<div>
+  <h1>Article Details</h1>
+  <p><%= link_to 'Back to Articles List', articles_path %></p>
+  <p><strong>Title:</strong> <%= @article.title%></p>
+  <p><strong>Description:</strong> <%= @article.description%></p>
+  <p>
+    <%= link_to 'Edit', edit_article_path(@article) %> |
+    <%= link_to 'Delete', article_path(@article), method: :delete, data: {confirm: 'Are you sure?'} %>
+  </p>
+</div>
