--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,4 @@
-<h1 style="text-align: center">This is an about Page</h1>
+<h1 style="text-align: center">
+  This is an about Page
+</h1>
+<%= link_to "Home", root_path %>
