--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,5 @@
-<h1 style="text-align: center">Home Page Alpha Blog</h1>
+<div>
+  <h1 style="text-align: center">Home Page Alpha Blog</h1>
+  <%= link_to 'Articles', articles_path %> |
+  <%= link_to 'About', about_path %>
+</div>
