--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,53 @@
-<div>
-  <h1 style="text-align: center">Home Page Alpha Blog</h1>
-  <%= link_to 'Articles', articles_path %> |
-  <%= link_to 'About', about_path %>
+<div class="container">
+  <div class="row align-items-center vh-80">
+    <div class="row p-3 bg-light rounded align-items-center">
+      <div class="col-xs-12 col-sm-12 col-md-9">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12 alpha-blog">
+            Alpha-Blog
+          </div>
+          <% @articles.each do |article| %>
+            <div class="col-xs-12 col-sm-4 col-md-4">
+              <div class="card border">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    <%= article.title.capitalize %>
+                  </h5>
+                  <p class="card-text">
+                    <%= article.description.capitalize %>
+                  </p>
+                  <%= link_to 'Read', article_path(article)%>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-3 bg-white border rounded p-3">
+        <div>
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1">
+            </div>
+            <div class="text-center">
+            
+              <button type="submit" class="btn btn-primary">
+                Sign In
+              </button>
+            </div>
+          </form>
+          <hr/>
+          <div class="text-center">
+            <p>New around here? </p>
+            <button type="submit" class="btn btn-secondary">Sign Up</button>
+          </div>
+        </div> 
+      </div>
+    </div>
+  </div>
 </div>
