--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,22 +1,27 @@
-<% if @article.errors.any? %>
-  <h3>The following errors prevented the article from being saved</h3>
-  <ul>
-    <% @article.errors.full_messages.each do |error_msg| %>
-      <li><%= error_msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-<%= form_with model: @article, local: true do |form| %>
-  <p>
-    <%= form.label :title %></br>
-    <%= form.text_field :title %>
-  </p>
-  <p>
-    <%= form.label :description %></br>
-    <%= form.text_area :description %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
-<p><%= link_to 'Back to Articles List', articles_path %></p> 
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <%= render 'shared/errors', object: @article %>
+      <%= form_with model: @article, class: 'shadow mb-5 p-3 bg-dark text-white rounded', local: true do |form| %>
+        <div class="form-group row">
+          <%= form.label :title, class: 'col-2 col-form-label' %>
+          <div class="col-10">
+            <%= form.text_field :title, class: 'form-control', placeholder: 'Title of article' %>
+          </div>
+        </div>
+        <div class="form-group row">
+          <%= form.label :description, class: 'col-2 col-form-label' %>
+          <div class="col-10">
+            <%= form.text_area :description, rows: 10, class: 'form-control', placeholder: 'Description of article' %>
+          </div>
+        </div>
+        <div class="form-group row justify-content-center">
+          <%= form.submit class: 'btn btn-outline-light btn-lg'%>
+        </div>
+      <% end %>
+    </div>
+    <div class="col-10 text-center">
+      <%= link_to '[ Back to Articles List ]', articles_path, class: 'text-dark' %>
+    </div>
+  </div>   
+</div>
