--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,31 +1,42 @@
 <div>
-  <h1>List of Articles</h1>
-  <p>
-    <%= link_to "Create new Article", new_article_path %>
-  </p>
-  </br>
-  <table>
-    <thead>
-      <tr>
-        <th>Id</th>
-        <th>Title</th>
-        <th>Description</th>
-        <th colspan="3">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @articles.each do |article| %>
-        <tr>
-          <td><%= article.id %></td>
-          <td><%= article.title %></td>
-          <td><%= article.description %></td>
-          <td><%= link_to "Show", article_path(article) %></td>
-          <td><%= link_to "Edit", edit_article_path(article) %></td>
-          <td><%= link_to "Delete", article_path(article), method: :delete, data: {confirm: 'Are you sure?'} %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-  </br>
-  <%= link_to "Home", root_path %>
+  <h1 class="text-center mt-4">Articles List</h1>
+  <div class="container mt-4">
+    <% @articles.each do |article| %>
+      <div class="row justify-content-md-center">
+        <div class="col-8">
+          <div class="card text-center shadow mb-5 rounded border">
+            <div class="card-header font-italic bg-dark text-white">
+              by André Preto
+            </div>
+            <div class="card-body bg-white">
+              <h5 class="card-title">
+                <%= link_to article.title.capitalize, article_path(article), class: 'text-dark' %>
+              </h5>
+              <p class="card-text">
+                <%= truncate(article.description, length: 100) %>
+              </p>
+              <%= link_to "Show", 
+                          article_path(article), 
+                          class: 'btn btn-outline-success' 
+              %>
+              <%= link_to "Edit", 
+                          edit_article_path(article), 
+                          class: 'btn btn-outline-primary' 
+              %>
+              <%= link_to "Delete", 
+                          article_path(article), 
+                          method: :delete, 
+                          data: {confirm: 'Are you sure?'} ,
+                          class: 'btn btn-outline-danger'
+              %>
+            </div>
+            <div class="card-footer bg-dark text-white">
+              Created about <%= time_ago_in_words(article.created_at) %> ago, 
+              Updated about <%= time_ago_in_words(article.updated_at) %> ago 
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
