--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,37 @@
 <div>
-  <h1>Article Details</h1>
-  <p><strong>Title:</strong> <%= @article.title%></p>
-  <p><strong>Description:</strong> <%= @article.description%></p>
-  <p>
-    <%= link_to 'Edit', edit_article_path(@article) %> |
-    <%= link_to 'Delete', article_path(@article), method: :delete, data: {confirm: 'Are you sure?'} %>
-  </p>
-  <p><%= link_to 'Back to Articles List', articles_path %></p>
+  <h1 class="text-center mt-4">Article Details</h1>
+  <div class="container mt-4">
+    <div class="row justify-content-md-center">
+      <div class="col-8 text-center">
+        <div class="card text-center shadow mb-5 rounded border">
+          <div class="card-header font-italic bg-dark text-white">
+            by André Preto
+          </div>
+          <div class="card-body bg-white">
+            <h5 class="card-title text-dark">
+              <%= @article.title.capitalize %>
+            </h5>
+            <div class="card-text text-justify">
+              <%= simple_format(@article.description) %>
+            </div>
+            <%= link_to "Edit", 
+                        edit_article_path(@article), 
+                        class: 'btn btn-outline-primary' 
+            %>
+            <%= link_to "Delete", 
+                        article_path(@article), 
+                        method: :delete, 
+                        data: {confirm: 'Are you sure?'} ,
+                        class: 'btn btn-outline-danger'
+            %>
+          </div>
+          <div class="card-footer bg-dark text-white">
+            Created about <%= time_ago_in_words(@article.created_at) %> ago, 
+            Updated about <%= time_ago_in_words(@article.updated_at) %> ago 
+          </div>
+        </div>
+        <%= link_to '[ Back to Articles List ]', articles_path, class: 'text-dark' %>
+      </div>
+    </div>
+  </div>
 </div>
