--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,7 @@
         <div class="col-8">
           <div class="card text-center shadow mb-5 rounded border">
             <div class="card-header font-italic bg-dark text-white">
-              by André Preto
+              by <%= article.user.username.capitalize %>
             </div>
             <div class="card-body bg-white">
               <h5 class="card-title">
