--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -44,7 +44,7 @@
           <hr/>
           <div class="text-center">
             <p>New around here? </p>
-            <button type="submit" class="btn btn-secondary">Sign Up</button>
+            <%= link_to 'Sign Up', signup_path, class: 'btn btn-secondary' %>
           </div>
         </div> 
       </div>
