--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
               <%= gravatar_for @user, size: 200 %>
             </h5>
             <p class="card-text">
-              <%= @user.articles.count %> Articles
+            <%= pluralize(@user.articles.count, "Article") %>
             </p>
             <%= link_to "Edit Profile", 
                          edit_user_path(@user), 
