--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
 <div>
   <h1 class="text-center mt-4">Articles List</h1>
-  <%= render 'articles', articles: @articles %>
+  <%= render 'articles' %>
 </div>
