--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,3 +13,36 @@
 .article-preview {
   min-height: 215px;
 }
+
+// Pagination styling //
+.apple_pagination {
+  text-align: center;
+  padding: 1em;
+  cursor: default; 
+}
+.apple_pagination a, .apple_pagination span {
+  padding: 0.2em 0.3em; 
+}
+.apple_pagination .disabled {
+  color: #aaaaaa; 
+}
+.apple_pagination .current {
+  font-style: normal;
+  font-weight: bold;
+  background-color: #bebebe;
+  display: inline-block;
+  width: 1.4em;
+  height: 1.5em;
+  line-height: 1.5;
+  -moz-border-radius: 1em;
+  -webkit-border-radius: 1em;
+  border-radius: 1em;
+  text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px; 
+}
+.apple_pagination a {
+  text-decoration: none;
+  color: black; 
+}
+.apple_pagination a:hover, .apple_pagination a:focus {
+  text-decoration: underline; 
+}
