--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
 <div>
   <h1 class="text-center mt-4">Alpha Bloggers</h1>
   <div class="container mt-4">
+    <%= will_paginate @users, class: 'apple_pagination mb-4 mt-4' %>
     <% @users.each do |user| %>
       <div class="row justify-content-md-center">
         <div class="col-8">
@@ -32,5 +33,6 @@
         </div>
       </div>
     <% end %>
+        <%= will_paginate @users, class: 'apple_pagination mb-4' %>
   </div>
 </div>
