--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -15,20 +15,22 @@
               <p class="card-text">
                 <%= truncate(article.description, length: 100) %>
               </p>
-              <%= link_to "Show", 
+              <%= link_to "View", 
                           article_path(article), 
                           class: 'btn btn-outline-success' 
               %>
-              <%= link_to "Edit", 
-                          edit_article_path(article), 
-                          class: 'btn btn-outline-primary' 
-              %>
-              <%= link_to "Delete", 
-                          article_path(article), 
-                          method: :delete, 
-                          data: {confirm: 'Are you sure?'} ,
-                          class: 'btn btn-outline-danger'
-              %>
+              <% if logged_in? && current_user == article.user %>
+                <%= link_to "Edit", 
+                            edit_article_path(article), 
+                            class: 'btn btn-outline-primary' 
+                %>
+                <%= link_to "Delete", 
+                            article_path(article), 
+                            method: :delete, 
+                            data: {confirm: 'Are you sure?'} ,
+                            class: 'btn btn-outline-danger'
+                %>
+              <% end %> 
             </div>
             <div class="card-footer bg-dark text-white">
               Created about <%= time_ago_in_words(article.created_at) %> ago, 
