--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,7 +16,7 @@
           </div>
         </div>
         <div class="form-group row justify-content-center">
-          <%= form.submit class: 'btn btn-outline-light btn-lg'%>
+          <%= form.submit class: 'btn btn-outline-light'%>
         </div>
       <% end %>
     </div>
