--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,5 @@
 <% if flash.any? %>
-  <div class="container">
+  <div class="container p-3">
     <% flash.each do |name, msg|%>
       <div class="alert alert-success alert-dismissible fade show" role="alert">
         <%= msg %>
