--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="row align-items-center justify-content-center vh-80">
-    <div class="row p-3 bg-light rounded justify-content-center">
-      <div class="col-12 col-md-9 rounded p-3">
+    <div class="row p-3 bg-light rounded justify-content-center border shadow">
+      <div class="col-12 rounded p-3">
         <div class="row">
           <div class="col-12 alpha-blog text-center">
             Alpha-Blog
           </div>
           <% @articles.each do |article| %>
-            <div class="d-none d-lg-block col-lg-4 mb-4">
+            <div class="d-none d-lg-block col-lg-3 mb-4">
               <div class="card border article-preview">
                 <div class="card-body">
                   <h5 class="card-title">
@@ -23,30 +23,13 @@
           <% end %>
         </div>
       </div>
-      <div class="col-12 col-lg-3 bg-white border rounded p-3">
-        <div>
-          <form>
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="text-center">
-            
-              <button type="submit" class="btn btn-primary">
-                Sign In
-              </button>
-            </div>
-          </form>
-          <hr/>
-          <div class="text-center">
-            <p>New around here? </p>
-            <%= link_to 'Sign Up', signup_path, class: 'btn btn-secondary' %>
-          </div>
-        </div> 
+      <div class="d-inline text-center mr-3 mb-4">
+        <p>Discover our articles!</p>
+        <%= link_to 'Sign In', login_path, class: 'btn btn-primary' %>
+      </div>
+      <div class="d-inline text-center ml-3 mb-4">
+        <p>New around here?</p>
+        <%= link_to 'Sign Up', signup_path, class: 'btn btn-secondary' %>
       </div>
     </div>
   </div>
