--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-group row justify-content-center">
-          <%= form.submit(@user.new_record? ? 'Sign Up': 'Update Account', class: 'btn btn-outline-light btn-lg') %>
+          <%= form.submit(@user.new_record? ? 'Sign Up': 'Update Account', class: 'btn btn-outline-light') %>
         </div>
       <% end %>
     </div>
