--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,14 +17,22 @@
                 <% user_article_count = @articles_count[user.id] || 0%>
                 <%= pluralize(user_article_count, "Article") %>
               </p>
-              <%= link_to "View Profile", 
-                          user_path(user), 
-                          class: 'btn btn-outline-success' 
-              %>
-              <%= link_to "Edit Profile", 
-                          edit_user_path(user), 
-                          class: 'btn btn-outline-primary' 
-              %>
+                <%= link_to "View Profile", 
+                            user_path(user), 
+                            class: 'btn btn-outline-success' 
+                %>
+                <% if logged_in? && current_user == user %>
+                  <%= link_to "Edit Profile", 
+                              edit_user_path(user), 
+                              class: 'btn btn-outline-primary' 
+                  %>
+                  <%= link_to "Delete Profile", 
+                              user_path(@user),
+                              method: :delete, 
+                              class: 'btn btn-outline-danger',
+                              data: { confirm: "Are you sure you want to delete your profile?" } 
+                  %>
+                <% end %>
             </div>
             <div class="card-footer bg-dark text-white">
               Joined <%= time_ago_in_words(user.created_at) %> ago, 
