--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
             <p class="card-text">
             <%= pluralize(@user.articles.count, "Article") %>
             </p>
-            <% if logged_in? && current_user == @user %>
+            <% if logged_in? && (current_user == @user || current_user.admin?) %>
               <%= link_to "Edit Profile", 
                           edit_user_path(@user), 
                           class: 'btn btn-outline-primary' 
@@ -23,7 +23,7 @@
                           user_path(@user),
                           method: :delete, 
                           class: 'btn btn-outline-danger',
-                          data: { confirm: "Are you sure you want to delete your profile?" }  
+                          data: { confirm: "Are you sure you want to delete the profile?" }  
               %>
             <% end %>
           </div>
