--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -19,7 +19,7 @@
                           article_path(article), 
                           class: 'btn btn-outline-success' 
               %>
-              <% if logged_in? && current_user == article.user %>
+              <% if logged_in? && (current_user == article.user || current_user.admin?) %>
                 <%= link_to "Edit", 
                             edit_article_path(article), 
                             class: 'btn btn-outline-primary' 
