--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,7 +15,7 @@
             <div class="card-text text-justify">
               <%= simple_format(@article.description) %>
             </div>
-            <% if logged_in? && current_user == @article.user %>
+            <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
               <%= link_to "Edit", 
                           edit_article_path(@article), 
                           class: 'btn btn-outline-primary' 
