--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,7 +1,8 @@
 <% if flash.any? %>
   <div class="container p-3">
     <% flash.each do |name, msg|%>
-      <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <% flash_class = name == "notice" ? 'success' : 'danger' %>
+      <div class="alert alert-<%= flash_class %> alert-dismissible fade show" role="alert">
         <%= msg %>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
