--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -39,7 +39,7 @@
               data-toggle="dropdown" 
               aria-haspopup="true" 
               aria-expanded="false">
-              <%= current_user.username %>
+              <%= current_user.admin? ? "[Admin] #{current_user.username}" : current_user.username %>
             </a>
             <div class="dropdown-menu" 
                 aria-labelledby="navbarDropdown">
