feature/article-categories-and-unit-testing - Index, Show and Create categories views and actions. Unit and integration tests for category model and controller

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,46 +15,64 @@
         <li class="nav-item">
           <%= link_to 'Bloggers', users_path, class: 'nav-link text-white' %>
         </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-white" 
-              href="#" 
-              id="navbarDropdown" 
-              role="button" 
-              data-toggle="dropdown" 
-              aria-haspopup="true" 
-              aria-expanded="false">
-              Articles
-            </a>
-            <div class="dropdown-menu" 
-                aria-labelledby="navbarDropdown">
-              <%= link_to 'View articles', articles_path, class: 'dropdown-item' %>
-              <%= link_to 'New article', new_article_path, class: 'dropdown-item' %>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-white" 
-              href="#" 
-              id="navbarDropdown" 
-              role="button" 
-              data-toggle="dropdown" 
-              aria-haspopup="true" 
-              aria-expanded="false">
-              <%= current_user.admin? ? "[Admin] #{current_user.username}" : current_user.username %>
-            </a>
-            <div class="dropdown-menu" 
-                aria-labelledby="navbarDropdown">
-              <%= link_to 'View my profile', 
-                          user_path(current_user), 
-                          class: 'dropdown-item'
-              %>
-              <%= link_to 'Edit my profile', 
-                          edit_user_path(current_user), 
-                          class: 'dropdown-item' 
-              %>
-              <div class="dropdown-divider"></div>
-              <%= link_to 'Log Out', logout_path, method: :delete, class: 'dropdown-item' %>
-            </div>
-          </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-white" 
+            href="#" 
+            id="navbarDropdownArticles" 
+            role="button" 
+            data-toggle="dropdown" 
+            aria-haspopup="true" 
+            aria-expanded="false">
+            Articles
+          </a>
+          <div class="dropdown-menu" 
+              aria-labelledby="navbarDropdown">
+            <%= link_to 'View articles', articles_path, class: 'dropdown-item' %>
+            <%= link_to 'New article', new_article_path, class: 'dropdown-item' %>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-white" 
+            href="#" 
+            id="navbarDropdownCategories" 
+            role="button" 
+            data-toggle="dropdown" 
+            aria-haspopup="true" 
+            aria-expanded="false">
+            Categories
+          </a>
+          <div class="dropdown-menu" 
+              aria-labelledby="navbarDropdown">
+            <%= link_to 'View categories', categories_path, class: 'dropdown-item' %>
+            <% if current_user.admin? %>
+              <%= link_to 'New Category', new_category_path, class: 'dropdown-item' %>
+            <% end %>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-white" 
+            href="#" 
+            id="navbarDropdown" 
+            role="button" 
+            data-toggle="dropdown" 
+            aria-haspopup="true" 
+            aria-expanded="false">
+            <%= current_user.admin? ? "[Admin] #{current_user.username}" : current_user.username %>
+          </a>
+          <div class="dropdown-menu" 
+              aria-labelledby="navbarDropdown">
+            <%= link_to 'View my profile', 
+                        user_path(current_user), 
+                        class: 'dropdown-item'
+            %>
+            <%= link_to 'Edit my profile', 
+                        edit_user_path(current_user), 
+                        class: 'dropdown-item' 
+            %>
+            <div class="dropdown-divider"></div>
+            <%= link_to 'Log Out', logout_path, method: :delete, class: 'dropdown-item' %>
+          </div>
+        </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
