--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,31 +1,26 @@
+<div>
+  <h1 class="text-center mt-4">Categories List</h1>
   <div class="container mt-4">
-    <%= will_paginate @articles, class: 'apple_pagination mb-4 mt-4' %>
-    <% @articles.each do |article| %>
+    <%= will_paginate @categories, class: 'apple_pagination mb-4 mt-4' %>
+    <% @categories.each do |category| %>
       <div class="row justify-content-center">
-        <div class="col-8">
+        <div class="col-6">
           <div class="card text-center shadow mb-5 rounded border">
             <div class="card-header font-italic bg-dark text-white">
-              <%= link_to gravatar_for(article.user, size: 40), user_path(article.user) %> 
-              by <%= article.user.username.capitalize %>
+              <%= category.name %>
             </div>
             <div class="card-body bg-white">
-              <h5 class="card-title">
-                <%= link_to article.title.capitalize, article_path(article), class: 'text-dark' %>
-              </h5>
-              <p class="card-text">
-                <%= truncate(article.description, length: 100) %>
-              </p>
               <%= link_to "View", 
-                          article_path(article), 
+                          category_path(category), 
                           class: 'btn btn-outline-success' 
               %>
-              <% if logged_in? && (current_user == article.user || current_user.admin?) %>
+              <% if logged_in? && current_user.admin? %>
                 <%= link_to "Edit", 
-                            edit_article_path(article), 
+                            edit_category_path(category), 
                             class: 'btn btn-outline-primary' 
                 %>
                 <%= link_to "Delete", 
-                            article_path(article), 
+                            category_path(category), 
                             method: :delete, 
                             data: {confirm: 'Are you sure?'} ,
                             class: 'btn btn-outline-danger'
@@ -33,8 +28,8 @@
               <% end %> 
             </div>
             <div class="card-footer bg-dark text-white">
-              Created about <%= time_ago_in_words(article.created_at) %> ago, 
-              Updated about <%= time_ago_in_words(article.updated_at) %> ago 
+              Created about <%= time_ago_in_words(category.created_at) %> ago, 
+              Updated about <%= time_ago_in_words(category.updated_at) %> ago 
             </div>
           </div>
         </div>
@@ -42,3 +37,4 @@
     <% end %>
     <%= will_paginate @articles, class: 'apple_pagination mb-4' %>
   </div>
+</div>
