--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
   <div class="container mt-4">
     <%= will_paginate @users, class: 'apple_pagination mb-4 mt-4' %>
     <% @users.each do |user| %>
-      <div class="row justify-content-md-center">
+      <div class="row justify-content-center">
         <div class="col-8">
           <div class="card text-center shadow mb-5 rounded border">
             <div class="card-header font-italic bg-dark text-white">
