--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -31,7 +31,7 @@
       <% end %>
     </div>
     <div class="col-10 text-center">
-      <%= link_to '[ Back ]', @user.new_record? ? root_path : users_path, class: 'text-dark' %>
+      <%= link_to '[ Back to Users List ]', @user.new_record? ? root_path : users_path, class: 'text-dark' %>
     </div>
   </div>   
 </div>
