--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,27 +1,35 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-10">
-      <%= render 'shared/errors', object: @article %>
-      <%= form_with model: @article, class: 'shadow mb-5 p-3 bg-dark text-white rounded', local: true do |form| %>
+      <%= render "shared/errors", object: @article %>
+      <%= form_with model: @article, class: "shadow mb-5 p-3 bg-dark text-white rounded", local: true do |form| %>
         <div class="form-group row">
-          <%= form.label :title, class: 'col-2 col-form-label' %>
+          <%= form.label :title, class: "col-2 col-form-label" %>
           <div class="col-10">
-            <%= form.text_field :title, class: 'form-control', placeholder: 'Title of article' %>
+            <%= form.text_field :title, class: "form-control", placeholder: "Title of article" %>
           </div>
         </div>
         <div class="form-group row">
-          <%= form.label :description, class: 'col-2 col-form-label' %>
+          <%= form.label :description, class: "col-2 col-form-label" %>
           <div class="col-10">
-            <%= form.text_area :description, rows: 10, class: 'form-control', placeholder: 'Description of article' %>
+            <%= form.text_area :description, rows: 10, class: "form-control", placeholder: "Description of article" %>
+          </div>
+        </div>
+        <div class="form-group row">
+          <%= form.label :category, class: "col-2 col-form-label" %>
+          <div class="col-10">
+            <%= form.collection_select(:category_ids, Category.order(:name), :id, :name,
+                                       { prompt: "Choose one or more categories" },
+                                       { multiple: true, size: 3, class: "form-control custom-select" }) %>
           </div>
         </div>
         <div class="form-group row justify-content-center">
-          <%= form.submit class: 'btn btn-outline-light'%>
+          <%= form.submit class: "btn btn-outline-light" %>
         </div>
       <% end %>
     </div>
     <div class="col-10 text-center">
-      <%= link_to '[ Back to Articles List ]', articles_path, class: 'text-dark' %>
+      <%= link_to "[ Back to Articles List ]", articles_path, class: "text-dark" %>
     </div>
   </div>   
 </div>
